--- a/html/guanyu/css/guanyu.css
+++ b/html/guanyu/css/guanyu.css
@@ -179,10 +179,10 @@ a:hover{
 	font-size: 14px;
 	line-height: 50px;
 }
-.c2{
-	text-align:left;
-	font-size:14px;
-	color:#2756a4;
+.c1 a{
+	font-size: 14px;
+	text-align: left;
+	color:#2756a4;	
 }
 .c1 span{
 	position:relative;
