--- a/tech/problem.css
+++ b/tech/problem.css
@@ -612,7 +612,7 @@ a{
 	height: 197px;
 	float:left;
 	padding-left: 15px;
-	background-image: url(index/bottom.jpg);
+	background-image: url(photos/bottom.jpg);
 	background-repeat: no-repeat;
 	background-position:20px top;
 	text-align: left;
